--- a/test/fixtures/busies.yml
+++ b/test/fixtures/busies.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  start_time: 1
-  end_time: 1
+  start_time: 2021-12-15 12:57:35
+  end_time: 2021-12-15 12:57:35
   employee_id: 1
 
 two:
-  start_time: 1
-  end_time: 1
+  start_time: 2021-12-15 12:57:35
+  end_time: 2021-12-15 12:57:35
   employee_id: 1
